--- a/build.gradle
+++ b/build.gradle
@@ -17,5 +17,8 @@ allprojects {
     repositories {
         jcenter()
         google()
+        maven {
+            url 'https://raw.github.com/saltedge/saltedge-android/master/repo/'
+        }
     }
 }
